--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.8.2",
-    "@web3-react/core": "^8.0.23-beta.0",
-    "@web3-react/eip1193": "^8.0.18-beta.0",
-    "@web3-react/empty": "^8.0.12-beta.0",
-    "@web3-react/types": "^8.0.12-beta.0",
-    "@web3-react/url": "^8.0.17-beta.0",
+    "@web3-react/core": "8.0.30-beta.0",
+    "@web3-react/eip1193": "8.0.23-beta.0",
+    "@web3-react/empty": "8.0.17-beta.0",
+    "@web3-react/types": "8.0.17-beta.0",
+    "@web3-react/url": "8.0.22-beta.0",
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
     "ethers": "^5.1.4",
@@ -150,8 +150,8 @@
     "@uniswap/v3-core": "1.0.0",
     "@uniswap/v3-periphery": "^1.1.1",
     "@walletconnect/ethereum-provider": "^1.7.1",
-    "@web3-react/metamask": "^8.0.19-beta.0",
-    "@web3-react/walletconnect": "^8.0.26-beta.0",
+    "@web3-react/metamask": "8.0.24-beta.0",
+    "@web3-react/walletconnect": "8.0.31-beta.0",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-macros": "^3.1.0",
