--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,19 +7,21 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: ./.github/actions/setup
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+          registry-url: https://registry.npmjs.org
+          cache: 'yarn'
 
-      - run: yarn lint
+      - run: yarn install --frozen-lockfile
 
       - run: yarn test
         if: success()
 
-      - run: yarn hardhat &
-        if: success()
-
       - run: yarn test:e2e
+        if: success()
 
       - run: yarn release
         if: success()
