--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: "Unit test"
+name: Test
 
 on:
   push:
@@ -9,11 +9,19 @@ on:
       - main
 
 jobs:
-  unit-test:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: ./.github/actions/setup
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+          registry-url: https://registry.npmjs.org
+          cache: 'yarn'
+
+      - run: yarn install --frozen-lockfile
 
       - run: yarn test
+
+      - run: yarn test:e2e
