--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@semantic-release/git": "^10.0.1",
     "@svgr/rollup": "^6.2.1",
     "@testing-library/react": "^12",
+    "@testing-library/react-hooks": "^8.0.0",
     "@typechain/ethers-v5": "^7.0.0",
     "@types/jest": "^25.2.1",
     "@types/lingui__core": "^2.7.1",
