--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prepare": "yarn contracts:compile && yarn i18n:compile",
     "prepublishOnly": "yarn build",
     "start": "cosmos",
-    "build": "tsc && rollup --config --failAfterWarnings",
+    "build": "tsc -p tsconfig.build.json && rollup --config --failAfterWarnings",
     "release": "semantic-release",
     "lint": "eslint .",
     "test": "jest src",
