test: clean type coercions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,13 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": false,
+    "paths": {
+      "@uniswap/widgets": ["index"]
+    },
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
     "types": ["jest"],
     "useUnknownInCatchVariables": false
