--- a/package.json
+++ b/package.json
@@ -98,9 +98,9 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.17.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react": ">=17.0.1",
+    "react-dom": ">=17.0.1",
+    "react-redux": ">=7.2.2",
     "redux": "^4.1.2"
   },
   "optionalDependencies": {
