Revert "Merge branch 'main' into fix/slippage-input-decimals"
This reverts commit b7a4e3969bdf565f9861e822c82e8f58f18a63ff, reversing
changes made to ac8af2b6122a15d3302d9dee0f28c9bd7eb54096.

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,4 +1,4 @@
-name: "Unit test"
+name: "Integration test"
 
 on:
   push:
@@ -9,11 +9,13 @@ on:
       - main
 
 jobs:
-  unit-test:
+  e2e-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - uses: ./.github/actions/setup
 
-      - run: yarn test
+      - run: yarn hardhat &
+
+      - run: yarn test:e2e
