--- a/.github/workflows/crowdin-download.yaml
+++ b/.github/workflows/crowdin-download.yaml
@@ -1,4 +1,4 @@
-name: Crowdin Download
+name: Crowdin download
 
 on:
   schedule:
@@ -10,17 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org
-          cache: 'yarn'
+      - uses: ./.github/actions/setup
 
-      - run: yarn install --frozen-lockfile --ignore-scripts
-
-      - run: yarn i18n:extract
+      - run: "yarn i18n:extract"
 
       - uses: crowdin/github-action@1.4.8
         with:
