--- a/.github/workflows/crowdin-upload.yaml
+++ b/.github/workflows/crowdin-upload.yaml
@@ -1,4 +1,4 @@
-name: Crowdin Upload
+name: Crowdin upload
 
 on:
   push:
@@ -10,15 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org
-          cache: 'yarn'
-
-      - run: yarn install --frozen-lockfile --ignore-scripts
+      - uses: ./.github/actions/setup
 
       - run: yarn i18n:extract
 
