--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,15 +16,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org
-          cache: 'yarn'
-
-      - run: yarn install --frozen-lockfile --ignore-scripts
+      - uses: ./.github/actions/setup
 
       - uses: wearerequired/lint-action@v2
         with:
@@ -32,4 +26,4 @@ jobs:
           eslint: true
           eslint_extensions: 'js,jsx,ts,tsx'
           git_email: lint-action@uniswap.org
-          commit_message: "style(lint): lint action with ${linter}"
+          commit_message: "chore(lint): fix code style issues with ${linter}"
