--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,23 +7,19 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org
-          cache: 'yarn'
+      - uses: ./.github/actions/setup
 
-      - run: yarn install --frozen-lockfile
+      - run: yarn lint
 
       - run: yarn test
         if: success()
 
-      - run: yarn test:e2e
+      - run: yarn hardhat &
         if: success()
-        env:
-          JSON_RPC_PROVIDER: ${{ secrets.JSON_RPC_PROVIDER }}
+
+      - run: yarn test:e2e
 
       - run: yarn release
         if: success()
