--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,34 @@
 {
-  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "paths": {
-      "@uniswap/widgets": ["index"]
-    },
-    "types": ["jest"]
+    "allowJs": true,
+    "alwaysStrict": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
+    "declaration": true,
+    "declarationDir": "dts",
+    "downlevelIteration": true,
+    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": false,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "target": "es5",
+    "types": ["jest"],
+    "useUnknownInCatchVariables": false
   },
+  "exclude": ["node_modules"],
   "include": ["src/"]
 }
