--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@uniswap/widgets",
+  "version": "0.1.0",
   "description": "Uniswap Interface",
   "homepage": "https://github.com/Uniswap/widgets#readme",
   "repository": "https://github.com/Uniswap/widgets",
