--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "node-vibrant": "^3.2.1-alpha.1",
     "polished": "^3.3.2",
     "popper-max-size-modifier": "^0.2.0",
+    "qrcode": "^1.5.0",
     "react-feather": "^2.0.8",
     "react-popper": "^2.2.3",
     "react-virtualized-auto-sizer": "^1.0.2",
@@ -137,6 +138,7 @@
     "@types/ms.macro": "^2.0.0",
     "@types/multicodec": "^1.0.0",
     "@types/node": "^16.7.13",
+    "@types/qrcode": "^1.4.2",
     "@types/qs": "^6.9.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
