--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@web3-react/url": "8.0.22-beta.0",
     "ajv": "^6.12.3",
     "cids": "^1.0.0",
-    "ethers": "^5.1.4",
+    "ethers": "^5.6.9",
     "immer": "^9.0.6",
     "jotai": "^1.3.7",
     "jsbi": "^3.1.4",
@@ -94,6 +94,7 @@
     "styled-components": "^5.3.0",
     "tiny-invariant": "^1.2.0",
     "wcag-contrast": "^3.0.0",
+    "web3": "^1.7.4",
     "wicg-inert": "^3.1.1"
   },
   "peerDependencies": {
