--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Uniswap Interface",
   "homepage": "https://github.com/Uniswap/widgets#readme",
   "repository": "https://github.com/Uniswap/widgets",
+  "version": "1.0.0",
   "files": [
     "dist"
   ],
