--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@web3-react/eip1193": "8.0.25-beta.0",
     "@web3-react/empty": "8.0.19-beta.0",
     "@web3-react/metamask": "8.0.26-beta.0",
-    "@web3-react/network": "^8.0.26-beta.0",
+    "@web3-react/network": "8.0.26-beta.0",
     "@web3-react/types": "8.0.19-beta.0",
     "@web3-react/url": "8.0.24-beta.0",
     "@web3-react/walletconnect": "8.0.34-beta.0",
