--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@semantic-release/git": "^10.0.1",
     "@svgr/rollup": "^6.2.1",
     "@testing-library/react": "^12",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.2.0",
     "@typechain/ethers-v5": "^7.0.0",
     "@types/jest": "^25.2.1",
@@ -185,7 +186,7 @@
     "react-cosmos": "^5.6.6",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-test-renderer": "^18.0.0",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.1.2",
     "rollup": "^2.63.0",
     "rollup-plugin-dts": "^4.2.1",
