--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["src/types/v3", "src/abis/types", "src/locales/", "node_modules/", "yarn.lock", "dist/"],
+  "ignorePatterns": ["src/__generated__", "src/locales/", "node_modules/", "yarn.lock", "dist/"],
   "extends": [
     "react-app",
     "plugin:react/recommended",
