--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# generated contract types
-/src/types/v3
-/src/abis/types
-
 # generated locales
 /src/locales/**/*.js
 /src/locales/**/en-US.po
@@ -36,6 +32,6 @@ notes.txt
 # tests
 /coverage
 
-# generated ajv schema
+# generated files
 /src/__generated__/*
 !/src/__generated__/.gitkeep 
