--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "prepare": "yarn contracts:compile && yarn i18n:compile && yarn ajv:compile",
     "prepublishOnly": "yarn build",
     "start": "cosmos",
-    "build": "tsc -p tsconfig.build.json && rollup --config --failAfterWarnings",
+    "prebuild": "tsc -p tsconfig.build.json",
+    "build": "rollup --config --failAfterWarnings",
     "release": "semantic-release",
     "lint": "eslint .",
     "test": "jest src",
