--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "setimmediate": "^1.0.5",
     "styled-components": ">=5",
     "tiny-invariant": "^1.2.0",
+    "wagmi": "^0.6.8",
     "wcag-contrast": "^3.0.0",
     "wicg-inert": "^3.1.1"
   },
