--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -78,5 +78,13 @@
         ]
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*test.ts"], 
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
