--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "typechain": "^5.0.0",
     "typescript": "^4.4.3",
     "wcag-contrast": "^3.0.0",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "yarn-deduplicate": "^6.0.0"
   }
 }
