--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "qs": "^6.9.4",
     "react-cosmos": "^5.6.6",
     "react-test-renderer": "^18.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rollup": "^2.63.0",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-multi-input": "^1.3.1",
