--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "@fontsource/inter": "^4.5.1",
     "@popperjs/core": "^2.4.4",
     "@reduxjs/toolkit": "^1.6.1",
+    "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/redux-multicall": "^1.1.8",
     "@uniswap/router-sdk": "^1.3.0",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/smart-order-router": "^2.10.0",
     "@uniswap/token-lists": "^1.0.0-beta.30",
+    "@uniswap/universal-router-sdk": "^1.3.0",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.8.2",
     "@web3-react/core": "8.0.35-beta.0",
@@ -103,6 +105,7 @@
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
     "redux": ">=4.1.2",
+    "resize-observer-polyfill": "^1.5.1",
     "setimmediate": "^1.0.5",
     "styled-components": ">=5",
     "tiny-invariant": "^1.2.0",
@@ -128,10 +131,10 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@lingui/cli": "^3.9.0",
-    "@lingui/core": "^3.9.0",
-    "@lingui/macro": "^3.9.0",
-    "@lingui/react": "^3.9.0",
+    "@lingui/cli": "^3.15.0",
+    "@lingui/core": "^3.15.0",
+    "@lingui/macro": "^3.15.0",
+    "@lingui/react": "^3.15.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -142,7 +145,7 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@svgr/rollup": "^6.2.1",
-    "@testing-library/react": "^12",
+    "@testing-library/react": "^13",
     "@testing-library/user-event": "^14.2.0",
     "@typechain/ethers-v5": "^7.0.0",
     "@types/jest": "^25.2.1",
@@ -154,8 +157,8 @@
     "@types/node": "^16.11.47",
     "@types/qrcode": "^1.4.2",
     "@types/qs": "^6.9.2",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.16",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.2",
