--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "styled-components": ">=5",
     "tiny-invariant": "^1.2.0",
     "wcag-contrast": "^3.0.0",
-    "wicg-inert": "^3.1.1"
+    "wicg-inert": "^3.1.1",
+    "wido": "^0.2.0"
   },
   "peerDependencies": {
     "@babel/runtime": ">=7.17.0",
