--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-runtime": "^6.26.0",
+    "dependency-cruiser": "^12.7.0",
     "dotenv": "^16.0.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.11.0",
