fix: re-enable cd

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,9 @@
 name: Release
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  # manual trigger
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   release:
