--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@uniswap/universal-router-sdk": "^1.3.4",
     "@uniswap/v2-sdk": "^3.0.1",
     "@uniswap/v3-sdk": "^3.8.2",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "cids": "^1.0.0",
@@ -105,6 +107,7 @@
     "styled-components": ">=5",
     "tiny-invariant": "^1.2.0",
     "wcag-contrast": "^3.0.0",
+    "web3": "^1.8.2",
     "wicg-inert": "^3.1.1",
     "wido": "^0.2.1"
   },
