--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "require": "./dist/fonts.css"
     }
   },
-  "version": "0.1.2",
+  "version": "0.1.3",
   "scripts": {
     "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types \"./src/abis/**/*.json\"",
     "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/types/v3 \"./node_modules/@uniswap/**/artifacts/contracts/**/*.json\"",
@@ -87,6 +87,7 @@
     "ethers": "^5.6.1",
     "immer": "^9.0.6",
     "jotai": "^1.3.7",
+    "jotai-immer": "^0.2.0",
     "jsbi": "^3.1.4",
     "make-plural": "^7.0.0",
     "ms.macro": "^2.0.0",
