--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "ethers": "^5.6.1",
     "immer": "^9.0.6",
     "jotai": "^1.3.7",
-    "jotai-immer": "^0.2.0",
+    "jotai-immer": "0.1.0",
     "jsbi": "^3.1.4",
     "make-plural": "^7.0.0",
     "ms.macro": "^2.0.0",
