--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "require": "./dist/fonts.css"
     }
   },
-  "version": "0.1.4",
+  "version": "0.1.5",
   "scripts": {
     "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types \"./src/abis/**/*.json\"",
     "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/types/v3 \"./node_modules/@uniswap/**/artifacts/contracts/**/*.json\"",
@@ -86,7 +86,7 @@
     "cids": "^1.0.0",
     "ethers": "^5.6.1",
     "immer": "^9.0.6",
-    "jotai": "^1.3.7",
+    "jotai": "1.4.0",
     "jotai-immer": "0.1.0",
     "jsbi": "^3.1.4",
     "make-plural": "^7.0.0",
