Fix @uniswap/conedison import

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "start": "cosmos",
     "typecheck": "tsc -p tsconfig.json",
     "prebuild": "tsc -p tsconfig.build.json",
-    "build": "rollup --config --failAfterWarnings",
+    "build": "rollup --config",
     "deduplicate": "yarn-deduplicate --strategy=highest",
     "lint": "eslint .",
     "test": "jest src",
@@ -141,6 +141,7 @@
     "@lingui/macro": "^3.15.0",
     "@lingui/react": "^3.15.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@rollup/plugin-alias": "^4.0.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-inject": "^4.0.4",
