--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "require": "./dist/fonts.css"
     }
   },
-  "version": "0.1.10",
+  "version": "0.1.11",
   "scripts": {
     "contracts:compile:abi": "typechain --target ethers-v5 --out-dir src/abis/types \"./src/abis/**/*.json\"",
     "contracts:compile:v3": "typechain --target ethers-v5 --out-dir src/types/v3 \"./node_modules/@uniswap/**/artifacts/contracts/**/*.json\"",
@@ -40,7 +40,7 @@
     "prepublishOnly": "yarn build",
     "start": "cosmos",
     "typecheck": "tsc -p tsconfig.json",
-    "prebuild": "tsc -p tsconfig.build.json",
+    "prebuild": "tsc -p tsconfig.build.json && yarn docs",
     "build": "rollup --config",
     "deduplicate": "yarn-deduplicate --strategy=highest",
     "lint": "eslint .",
@@ -101,7 +101,7 @@
     "react-dom": ">=17.0.1",
     "react-feather": "^2.0.8",
     "react-popper": "^2.2.3",
-    "react-redux": ">=7.2.2",
+    "react-redux": "^8.0.5",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "rebass": "^4.0.7",
